--- a/src/juicy-tile-simple-editor.html
+++ b/src/juicy-tile-simple-editor.html
@@ -72,7 +72,7 @@
 
             .editor-tabs button.btn-tab {
                 background-color: #596567;
-                height: 43px;
+                height: 36px;
             }
 
             .editor-tabs button.active {
@@ -950,6 +950,7 @@
         </style>
 
         <div class="editor-tabs">
+            <button on-click="closeEditor">Close</button>
             <button class$="{{getTabButtonCss('normal', showMore)}}" on-click="toggleMore">Normal</button>
             <button class$="{{getTabButtonCss('expert', showMore)}}" on-click="toggleMore">Expert</button>
             <button on-click="toggleTree">Toggle sidebar</button>
