--- a/src/juicy-tile-simple-editor.html
+++ b/src/juicy-tile-simple-editor.html
@@ -279,7 +279,6 @@
             }
 
             .editor-simple-form .width-section {
-            
             }
 
             .editor-simple-form .width-section label {
@@ -400,16 +399,15 @@
             }
 
             .editor-simple-form .align-section {
-                width: 81px;
-                height: 81px;
-                border: 1px solid #414042;
+                width: 85px;
+                height: 85px;
                 margin-top: 10px;
                 margin-right: 0px;
             }
 
             .editor-simple-form .align-section .btn {
-                width: 25px;
-                height: 25px;
+                width: 26px;
+                height: 26px;
                 float: left;
                 margin: 1px;
                 border-radius: 0px;
@@ -421,12 +419,15 @@
         </style>
         <style>
             .editor-expert-form {
-                padding: 13px 0px 5px 10px;
+                margin-top: 12px;
+                padding: 1px 0px 0px 10px;
                 margin-right: 100px;
                 overflow: auto;
-                height: 115px;
+                height: 93px;
                 box-sizing: border-box;
                 -moz-box-sizing: border-box;
+                min-width: 1300px;
+                overflow: hidden;
             }
 
             .editor-expert-form .btn-range,
@@ -498,7 +499,7 @@
                 color: white;
                 border-radius: 0px;
                 width: 60px;
-                height: 42px;
+                height: 43px;
                 display: block;
                 float: left;
                 margin: 2px;
@@ -591,7 +592,7 @@
 
             .editor-expert-form .width-section {
                 margin-top: 2px;
-                margin-bottom: 3px;
+                margin-bottom: 5px;
             }
 
             .editor-expert-form .width-section label {
@@ -767,7 +768,7 @@
                 height: 30px;
                 background-position: center center;
                 background-repeat: no-repeat;
-                background-size: 28px 28px;
+                background-size: 28px auto;
             }
 
             .editor-expert-form .visible-section .btn.btn-visible {
@@ -781,7 +782,7 @@
             .editor-expert-form .dimension-section {
                 display: flex;
                 flex-direction: row;
-                margin: 5px 0px;
+                margin-top: 5px;
             }
 
             .editor-expert-form .dimension-section:first-child {
@@ -792,7 +793,7 @@
                 text-transform: uppercase;
                 font-size: 12px;
                 margin-right: 5px;
-                margin-top: 4px;
+                margin-top: 6px;
                 width: 45px;
                 display: block;
                 text-align: right;
@@ -804,7 +805,7 @@
                 padding: 4px 3px;
                 border-radius: 4px;
                 background-color: #3e494c;
-                height: 22px;
+                height: 24px;
             }
 
             .editor-expert-form .dimension-section input {
@@ -819,7 +820,8 @@
             }
 
             .editor-expert-form .dimension-section .btn-range {
-                height: 21px;
+                height: 25px;
+                width: 25px;
                 background-color: #384041;
                 padding: 1px 3px;
                 border-radius: 2px;
@@ -844,8 +846,8 @@
                 color: white;
                 font-size: 10px;
                 text-align: center;
-                line-height: 10px;
-                padding: 1px 3px;
+                line-height: 11px;
+                padding: 1px 3px 2px 3px;
                 border-radius: 2px;
                 margin: 0px 3px;
                 cursor: pointer;
@@ -866,8 +868,8 @@
 
             .editor-expert-form .outline-section {
                 background-color: black;
-                width: 88px;
-                height: 88px;
+                width: 91px;
+                height: 91px;
                 text-align: center;
                 box-sizing: border-box;
                 -moz-box-sizing: border-box;
@@ -898,11 +900,11 @@
             .editor-expert-form .tight-direction-html-source-section {
                 overflow: auto;
                 width: 130px;
-                height: 88px;
+                height: 91px;
                 box-sizing: border-box;
                 -moz-box-sizing: border-box;
                 background-color: #3e494c;
-                padding: 8px;
+                padding: 9px;
                 min-height: 0px;
             }
 
@@ -971,17 +973,16 @@
             }
 
             .editor-expert-form .align-section {
-                width: 86px;
-                height: 86px;
-                border: 1px solid #414042;
-                margin-right: 0px;
+                width: 95px;
+                height: 91px;
+                margin: -1px;
             }
 
             .editor-expert-form .align-section .btn {
-                width: 26px;
-                height: 26px;
+                width: 29px;
+                height: 29px;
                 float: left;
-                margin: 1.2px;
+                margin: 1px;
                 border-radius: 0px;
             }
 
@@ -1281,7 +1282,6 @@
         <juicy-highlight id="highlightScopeSelected" strokewidth="1" strokecolor="#C0C0C0" strokeoffset="2" overlay></juicy-highlight>
 
         <iron-localstorage name="juicy-tile-editor#showMore" value="{{showMore}}"></iron-localstorage>
-        <iron-localstorage name="juicy-tile-editor#showAdvanced" value="{{showAdvanced}}"></iron-localstorage>
         <iron-localstorage name="juicy-tile-editor#showTree" value="{{showTree}}" on-iron-localstorage-load-empty="initShowTree"></iron-localstorage>
     </template>
     <script src="juicy-tile-simple-editor.js"></script>
