--- a/src/juicy-tile-simple-editor-style.html
+++ b/src/juicy-tile-simple-editor-style.html
@@ -77,6 +77,7 @@
             .editor-breadcrumb {
                 background-color: #3e494c;
                 padding: 2px 10px;
+                margin-top: 10px;
             }
 
             .editor-breadcrumb a,
