Replace width/height with juicy-tile-simple-size control
https://github.com/Juicy/juicy-tile-editor/issues/116

--- a/src/juicy-tile-simple-editor-style.html
+++ b/src/juicy-tile-simple-editor-style.html
@@ -798,6 +798,12 @@
                 text-align: right;
             }
 
+            .editor-expert-form .dimension-section label.section-title-two {
+                line-height: 13px;
+                margin-top: 4px;
+                text-align: center;
+            }
+
             .editor-expert-form .dimension-section .control-group {
                 display: flex;
                 flex-direction: row;
