--- a/src/juicy-tile-simple-editor.html
+++ b/src/juicy-tile-simple-editor.html
@@ -137,7 +137,7 @@
                     <div class="dimension-section">
                         <label class="section-title">Width</label>
                         <div class="control-group">
-                            <juicy-tile-simple-size value="{{width}}" flexible="{{widthFlexible}}" disabled$="{{!selectedTiles.length}}"></juicy-tile-simple-size>
+                            <juicy-tile-simple-size value="{{width}}" flexible="{{widthFlexible}}" disabled$="{{!selectedTiles.length}}" on-calculate="calculateWidth"></juicy-tile-simple-size>
                         </div>
                     </div>
                     <div class="dimension-section">
@@ -148,7 +148,7 @@
                             <label class="section-title section-title-two">Min<br />Height</label>
                         </template>
                         <div class="control-group">
-                            <juicy-tile-simple-size value="{{height}}" dynamic="{{heightDynamic}}" show-dynamic="true" disabled$="{{!selectedTiles.length}}"></juicy-tile-simple-size>
+                            <juicy-tile-simple-size value="{{height}}" dynamic="{{heightDynamic}}" show-dynamic="true" disabled$="{{!selectedTiles.length}}" on-calculate="calculateHeight"></juicy-tile-simple-size>
                         </div>
                     </div>
                 </div>
