--- a/src/juicy-tile-simple-size.html
+++ b/src/juicy-tile-simple-size.html
@@ -55,6 +55,10 @@
                 color: white;
             }
 
+            label.checkbox {
+                width: 57px;
+            }
+
             label.checkbox input + span {
                 line-height: 11px;
             }
@@ -72,6 +76,10 @@
                 cursor: pointer;
                 margin-left: 3px;
             }
+
+            span.gutter {
+                width: 57px;
+            }
         </style>
         <div class="row">
             <input type="text" value="{{stringValue::input}}" disabled$="{{disabled}}" />
@@ -88,6 +96,9 @@
                     <input type="checkbox" checked="{{dynamic::change}}" disabled$="{{disabled}}" />
                     <span>Grow with<br />content</span>
                 </label>
+            </template>
+            <template is="dom-if" if="{{!showDynamic}}">
+                <span class="gutter"></span>
             </template>
             <button type="button" class="btn btn-calculate" title="Calculate real dimensions" on-click="calculate"></button>
         </div>
