--- a/src/juicy-tile-simple-editor-style.html
+++ b/src/juicy-tile-simple-editor-style.html
@@ -65,13 +65,32 @@
                 color: white;
             }
 
-            .editor-tabs button.btn-tab {
-                background-color: #596567;
-                height: 36px;
+            .editor-tabs button.btn-close {
+                background-image: url(images/close.svg);
+                background-position: center center;
+                background-repeat: no-repeat;
+                float: right;
+                width: 30px;
+                height: 25px;
+                opacity: 0.8;
+                margin: 2px 0px;
             }
 
-            .editor-tabs button.active {
+            .editor-tabs button.btn-close:hover {
+                opacity: 1;
+            }
+
+            .editor-tabs button.btn-tree {
+                margin-top: 10px;
+            }
+
+            .editor-tabs button.btn-tab {
+                height: 28px;
+            }
+
+            .editor-tabs button.btn-tab.active {
                 border-color: #596567;
+                background-color: #596567;
             }
 
             .editor-breadcrumb {
@@ -108,6 +127,21 @@
                 padding: 0px;
                 font-size: 13px;
                 overflow: auto;
+            }
+
+            .editor-tree-chevron {
+                position: fixed;
+                right: 20px;
+                top: 115px;
+                width: 60px;
+                height: 10px;
+                background-color: #3e494c;
+                border-radius: 0px 0px 10px 10px;
+                background-image: url(images/chevron-down.svg);
+                background-position: center 2px;
+                background-repeat: no-repeat;
+                background-size: 10px 5px;
+                cursor: pointer;
             }
 
             .editor-tree div.editor-tree-item {
@@ -879,6 +913,7 @@
                 box-sizing: border-box;
                 -moz-box-sizing: border-box;
                 padding: 8px;
+                padding-top: 0px;
             }
 
             .editor-expert-form .outline-section button.btn {
@@ -893,10 +928,10 @@
             .editor-expert-form .fill-section {
                 background-color: white;
                 color: black;
-                width: 35px;
-                height: 25px;
+                width: 55px;
+                height: 55px;
                 margin: auto;
-                margin-top: 5px;
+                line-height: 55px;
             }
 
             .editor-expert-form .fill-section button.btn {
