--- a/src/juicy-tile-simple-editor-style.html
+++ b/src/juicy-tile-simple-editor-style.html
@@ -847,64 +847,6 @@
                 height: 24px;
             }
 
-            .editor-expert-form .dimension-section input {
-                width: 40px;
-                margin-right: 3px;
-                border: none;
-                background-color: #3e494c;
-                color: white;
-                font-size: 12px;
-                padding-left: 5px;
-                flex: auto;
-            }
-
-            .editor-expert-form .dimension-section .btn-range {
-                height: 25px;
-                width: 25px;
-                background-color: #384041;
-                padding: 1px 3px;
-                border-radius: 2px;
-                margin: 0px 2px;
-                line-height: 21px;
-            }
-
-            .editor-expert-form .dimension-section .btn-range:hover {
-                background-color: #21b3cf;
-            }
-
-            .editor-expert-form .dimension-section label.checkbox {
-            }
-
-            .editor-expert-form .dimension-section label.checkbox input {
-                display: none;
-            }
-
-            .editor-expert-form .dimension-section label.checkbox span {
-                display: block;
-                background-color: #384041;
-                color: white;
-                font-size: 10px;
-                text-align: center;
-                line-height: 11px;
-                padding: 1px 3px 2px 3px;
-                border-radius: 2px;
-                margin: 0px 3px;
-                cursor: pointer;
-            }
-
-            .editor-expert-form .dimension-section label.checkbox input[checked] + span {
-                background-color: #21b3cf;
-            }
-
-            .editor-expert-form .dimension-section label.checkbox input:checked + span {
-                background-color: #21b3cf;
-            }
-
-            .editor-expert-form .dimension-section label.checkbox input[disabled] + span {
-                cursor: not-allowed;
-                color: #b0b6b6;
-            }
-
             .editor-expert-form .outline-section {
                 background-color: black;
                 width: 91px;
@@ -1225,6 +1167,13 @@
                     width: 42.75px;
                 }
 
+                .editor-expert-form .dimension-section label.section-title-two {
+                    font-size: 11px;
+                    line-height: 12px;
+                    margin-top: 3px;
+                    text-align: center;
+                }
+
                 .editor-expert-form .dimension-section .control-group {
                     display: flex;
                     flex-direction: row;
@@ -1234,45 +1183,22 @@
                     height: 22.8px;
                 }
 
-                .editor-expert-form .dimension-section input {
-                    width: 38px;
-                    margin-right: 2.85px;
-                    font-size: 11.4px;
-                    padding-left: 4.75px;
-                }
-
-                .editor-expert-form .dimension-section .btn-range {
-                    height: 23px;
-                    width: 23px;
-                    background-color: #384041;
-                    padding: 1px 2.85px;
-                    border-radius: 1.9px;
-                    margin: 0px 1.9px;
-                    line-height: 19.95px;
-                }
-
-                .editor-expert-form .dimension-section label.checkbox span {
-                    font-size: 9px;
-                    line-height: 10.45px;
-                    padding: 1px 3px 1.9px 3px;
-                    border-radius: 6px;
-                    margin: 0px 2.85px;
-                }
-
                 .editor-expert-form .outline-section {
                     width: 86.45px;
                     height: 86.45px;
                     padding: 7.6px;
+                    padding-top: 0px;
                 }
 
                 .editor-expert-form .outline-section button.btn {
                     font-size: 11.4px;
+                    line-height: 11px;
                 }
 
                 .editor-expert-form .fill-section {
-                    width: 33.25px;
-                    height: 23.75px;
-                    margin-top: 4.75px;
+                    width: 50px;
+                    height: 50px;
+                    line-height: 50px;
                 }
 
                 .editor-expert-form .tight-direction-html-source-section {
