Add three eye states
https://github.com/Juicy/juicy-tile-editor/issues/124

--- a/src/juicy-tile-simple-editor-style.html
+++ b/src/juicy-tile-simple-editor-style.html
@@ -170,11 +170,13 @@
                 width: 18px;
                 height: 18px;
                 float: right;
-                background-image: url(images/eye.svg);
-                background-size: 14px 14px;
+                background-image: url(images/eye-cross.svg);
+                background-size: 15px 15px;
                 background-position: center center;
                 background-repeat: no-repeat;
                 margin-top: 1px;
+                background-color: #ebebe4;
+                border-radius: 2px;
             }
 
             juicy-popover div.popup {
@@ -428,6 +430,10 @@
             }
 
             .editor-simple-form .visible-section .btn.btn-hidden {
+                background-image: url(images/eye-cross.svg);
+            }
+
+            .editor-simple-form .visible-section .btn.btn-undefined {
                 background-image: url(images/eye.svg);
             }
 
@@ -809,6 +815,10 @@
             }
 
             .editor-expert-form .visible-section .btn.btn-hidden {
+                background-image: url(images/eye-cross.svg);
+            }
+
+            .editor-expert-form .visible-section .btn.btn-undefined {
                 background-image: url(images/eye.svg);
             }
 
