Add sidebar show eye icon
https://github.com/Juicy/juicy-tile-editor/issues/130

--- a/src/juicy-tile-simple-editor-style.html
+++ b/src/juicy-tile-simple-editor-style.html
@@ -166,6 +166,7 @@
                 text-decoration: underline;
             }
 
+            .editor-tree a.show-icon,
             .editor-tree a.hidden-icon {
                 width: 18px;
                 height: 18px;
@@ -177,6 +178,10 @@
                 margin-top: 1px;
                 background-color: #ebebe4;
                 border-radius: 2px;
+            }
+
+            .editor-tree a.show-icon {
+                background-image: url(images/eye.svg);
             }
 
             juicy-popover div.popup {
