--- a/src/juicy-tile-simple-editor.html
+++ b/src/juicy-tile-simple-editor.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="editor-form-section media-section">
                     <template is="dom-repeat" items="{{mediaScreenRanges}}">
-                        <button type="button" class$="{{getMediaButtonCss(mediaScreen, item)}}" item="{{item}}" on-click="selectMediaScreen" title="{{item.name}}">
+                        <button type="button" class$="{{getMediaButtonCss(mediaScreen, item)}}" item="{{item}}" on-click="selectMediaScreen" title="{{item.name}}" disabled="{{!selectedList}}">
                             <span>{{item.width}}</span><span>px</span>
                         </button>
                     </template>
@@ -80,7 +80,7 @@
                 </div>
                 <div class="editor-form-section media-section">
                     <template is="dom-repeat" items="{{mediaScreenRanges}}">
-                        <button type="button" class$="{{getMediaButtonCss(mediaScreen, item)}}" item="{{item}}" on-click="selectMediaScreen" title="{{item.name}}">
+                        <button type="button" class$="{{getMediaButtonCss(mediaScreen, item)}}" item="{{item}}" on-click="selectMediaScreen" title="{{item.name}}" disabled="{{!selectedList}}">
                             <span>{{item.width}}</span><span>px</span>
                         </button>
                     </template>
