Fix example typo
https://github.com/Juicy/juicy-tile-editor/issues/137

--- a/examples/juicy-tile-table/simple.html
+++ b/examples/juicy-tile-table/simple.html
@@ -151,8 +151,8 @@
                             <juicy-tiles-setup-sync name="juicy-tile-simple-editor/simple.html#nested-left-1" stored-value="{{model.nestedSetup1Left}}" use-localstorage="true"></juicy-tiles-setup-sync>
                             <juicy-tile-table setup="{{model.nestedSetup1Left}}" defaultsetup="{{model.nestedSetupLeft1Copy}}">
                                 <div>
-                                    <label>MSI</label>
-                                    <input type="text" value="XFX" />
+                                    <label>Name</label>
+                                    <input type="text" value="MSI" />
                                 </div>
                                 <div>
                                     <label>Price</label>
