Fix width section styles

--- a/src/juicy-tile-simple-editor-style.html
+++ b/src/juicy-tile-simple-editor-style.html
@@ -333,6 +333,7 @@
             }
 
             .editor-simple-form .width-section {
+                padding-top: 25px;
             }
 
             .editor-simple-form .width-section label {
