Fix width section title styles

--- a/src/juicy-tile-simple-editor-style.html
+++ b/src/juicy-tile-simple-editor-style.html
@@ -333,7 +333,6 @@
             }
 
             .editor-simple-form .width-section {
-                padding-top: 25px;
             }
 
             .editor-simple-form .width-section label {
@@ -341,6 +340,7 @@
                 display: block;
                 font-size: 15px;
                 margin: 10px 0px 5px 0px;
+                min-height: 22px;
             }
 
             .editor-simple-form .width-section .btn-group {
